Bug 1135747 - The big letters when touching the contact list scrollbar were outside of the screen

--- a/apps/communications/contacts/style/contacts.css
+++ b/apps/communications/contacts/style/contacts.css
@@ -1070,6 +1070,11 @@ html[dir="rtl"] nav[data-type="scrollbar"] {
   left: unset;
 }
 
+html[dir="rtl"] nav[data-type="scrollbar"] p {
+  left: unset;
+  right: 10rem;
+}
+
 /* Overwrite input-areas bb */
 #custom-tag-reset {
   right: 1rem;
